# sps

src/cm_msgs/: CMakeLists.txt  mappings.yaml  package.xml  parameter_bridge.yaml
src/cm_msgs/action/: CheckForObjects.action
src/cm_msgs/msg/: BatteryState.msg  DockState.msg  InitialSlamPose.msg  LocalState.msg  Nav2State.msg  SpsDropCollision.msg  SpsHWError.msg  SpsNaviState.msg  SpsSlamReport.msg  SpsUltrasonic.msg  VirtualWall.msg  Virtualwalls.msg  WaitResumeFeedback.msg
src/cm_msgs/srv/: AutoMove.srv  GetPosesMileage.srv  Nav2.srv  NaviPoses.srv  NaviToPose.srv  ResumeFollowWaypoints.srv  SpsNaviVel.srv  SpsParams.srv  SpsSetSlamModel.srv
src/common/monitor_manager/: CMakeLists.txt  package.xml
src/common/monitor_manager/include/monitor_manager/: monitor_manager.hpp
src/common/monitor_manager/launch/: monitor_manager.launch.py
src/common/monitor_manager/src/: monitor_manager.cpp
src/engine/map_server/: CMakeLists.txt  package.xml
src/engine/map_server/doc/: SPS系统MapServer模块方案1.0.docx
src/engine/map_server/include/map_server/: lift_manager.hpp  lift_poi_process.h  map_database.hpp  map_server_core.hpp  map_structure.h  pose_manager.hpp  service_client.hpp
src/engine/map_server/launch/: map_server.launch.py
src/engine/map_server/param/: map_server.yaml
src/engine/map_server/src/: lift_manager.cpp  lift_poi_process.cpp  map_database.cpp  map_server_core.cpp  pose_manager.cpp  service_client.cpp
src/engine/semantic_area_server/: CMakeLists.txt  package.xml
src/engine/semantic_area_server/include/semantic_area_server/: semantic_area_server.hpp
src/engine/semantic_area_server/launch/: semantic_area_server.launch.py
src/engine/semantic_area_server/src/: semantic_area_server.cpp
src/engine/system_manager/: CMakeLists.txt  package.xml
src/engine/system_manager/bt_resource/: idle_state_bt.xml  robot_naviengine_bt.xml  working_state_bt.xml
src/engine/system_manager/include/system_manager/: bt_node_impl.hpp  define.h  local_manager.hpp  naviengine_node.hpp  robot_ctrl.h  robot_engine_observer.h  robot_naviengine.h  robot_observer.h  sps_fsm.hpp  task_manager.hpp
src/engine/system_manager/src/: bt_node_impl.cpp  local_manager.cpp  main.cpp  naviengine_node.cpp  robot_bt.cpp  robot_naviengine.cpp  simple_node.cpp  sps_fsm.cpp  task_manager.cpp
src/engine/system_manager/src/publisher/: cloud_twist_chassis.cpp  cloud_twist_mux.cpp  navi_state.cpp
src/engine/system_manager/src/service/: navi_to_pose.cpp
src/engine/system_manager/src/service_client/: get_charge_pile.cpp  get_lift_poi_info.cpp  get_map_info.cpp  get_poses_plan.cpp  load_navi_map.cpp  navi_pause_control.cpp  pixel_to_word.cpp  publish_mapping_map.cpp  query_lift_check_pose.cpp  query_lift_poi_type.cpp  query_poi_type.cpp  set_aided_pose.cpp  set_slam_model_client.cpp  word_to_pixel.cpp
src/engine/system_manager/src/subscriber/: map_server_info.cpp
src/engine/velocity_manager/: CMakeLists.txt  package.xml
src/engine/velocity_manager/include/velocity_manager/: velocity_manager.hpp
src/engine/velocity_manager/launch/: velocity_manager.launch.py
src/engine/velocity_manager/src/: velocity_manager.cpp
src/localization/slam_ros2/cartographer_ros/: CMakeLists.txt  package.xml
src/localization/slam_ros2/cartographer_ros/cartographer_ros/: assets_writer.cc  interface_loc_ros.cc  interface_loc_ros.h  interface_ros.cc  interface_ros.h  map_builder_bridge.cc  map_builder_bridge.h  msg_conversion.cc  msg_conversion.h  node.cc  node.h  node_constants.h  node_main.cc  node_main.h  node_options.cc  node_options.h  occupancy_grid_node.cc  occupancy_grid_node.h  offline_node.cc  sensor_bridge.cc  sensor_bridge.h  tf_bridge.cc  time_conversion.cc  time_conversion.h  trajectory_options.cc  trajectory_options.h
src/localization/slam_ros2/cartographer_ros/configuration_files/: gingle.lua
src/localization/slam_ros2/cartographer_ros/launch/: demo_gingle.launch
src/localization/slam_ros2/lidar_slam/: CMakeLists.txt  README.md  package.xml
src/localization/slam_src/: CMakeLists.txt  package.xml
src/localization/slam_src/configuration_files/: trajectory_builder_2d.lua
src/navi2/sensor_vel_filters/: CMakeLists.txt  package.xml
src/navi2/sensor_vel_filters/include/: laser_filter.h  pointcloud_filter.h  sensor_filter.h  sonor_filter.h
src/navi2/sensor_vel_filters/launch/: laser_filter.launch.py
src/navi2/sensor_vel_filters/src/: laser_filter.cpp  pointcloud_filter.cpp  pointcloud_filter_main.cpp  sensor_filter.cpp  sensor_filter_main.cpp
src/server/server_interface/: CMakeLists.txt  package.xml
src/server/server_interface/launch/: server_interface.launch.py
src/server/server_interface/param/: server_interface.yaml
src/server/server_interface/src/: main.cpp  server_interface_core.cpp
src/sps_msgs/sps_common_msgs/: CMakeLists.txt  package.xml
src/sps_msgs/sps_common_msgs/msg/: BatteryState.msg  BitMap.msg  EngineState.msg  InitialSlamPose.msg  InitialSlamState.msg  LaserFrame.msg  LaserPoint.msg  LiftPoi.msg  LocalState.msg  LocalizationStatus.msg  MapInfo.msg  PixelPose.msg  RdmAlarm.msg  RobotStateAlarm.msg  SemanticsArea.msg  SensorState.msg  SpecialAreas.msg  UpdateNaviMap.msg  VersionInfo.msg
src/sps_msgs/sps_common_msgs/srv/: AidedPose.srv  ChangePixelPoseToWordPose.srv  ChangeWordPoseToPixelPose.srv  ChargingToDock.srv  CmdCtrl.srv  GetCurrRobotPose.srv  GetLiftCheckPixelPoint.srv  GetLiftOutAngle.srv  GetLiftPoiInfo.srv  GetMapInfo.srv  GetNaviPath.srv  GetNearestChargePile.srv  GetRobotLiftPose.srv  GetRobotMapPose.srv  GetSemanticAreaInfo.srv  GetSemanticsAreas.srv  GoalValidCheck.srv  LoopclosureMap.srv  Mode.srv  MoveTo.srv  NaviAverageArea.srv  NaviEdgeways.srv  NaviPath.srv  NaviPoses.srv  NaviToPose.srv  ParamsData.srv  PointLiftInsideCheck.srv  PublishInitialPixelPoseZero.srv  PublishLiftPoint.srv  QueryChargePileByName.srv  QueryLiftPoiType.srv  QueryPoiTypeByPose.srv  SaveMap.srv  SetDefaultChargePile.srv  SetParamData.srv  SetPoseInitialize.srv  SetPredictPose.srv  SetPredictPoses.srv  SetSlamModel.srv  SpsLoadMap.srv  (+5 more)
startup/: startup.sh  (+2 more)
(+490 files in other folders)
