<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>map_server</name>
  <version>0.1.0</version>
  <description>TODO</description>
  <maintainer email="xxxx@cloudminds.com">cloudminds</maintainer>
  <license>cloudminds</license>

  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>laser_geometry</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sps_common_msgs</build_depend>
  <build_depend>costmap_converter_msgs</build_depend>
  <build_depend>cm_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <exec_depend>sps_common_msgs</exec_depend>
  <exec_depend>costmap_converter_msgs</exec_depend>
  <exec_depend>cm_msgs</exec_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
